Reorganize controllers structure and fix banner, edit all layout

--- a/RoboTech/Views/Product/Details.cshtml
+++ b/RoboTech/Views/Product/Details.cshtml
@@ -5,8 +5,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
+
 <div id="product-details">
     <div class="container">
+        <div class="mt-4" style="margin-bottom: 60px">
+        <a href="/Product" class="text-body">
+            <i class="fas fa-long-arrow-alt-left me-4"></i>Return to shop
+        </a>
+        </div>
         <div class="card-wrapper">
             <div class="card">
                 <div class="product-imgs">
