--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -109,11 +109,9 @@
                     </div>
                 </div>
             </div>
-            <div class="copyright">
-                Copyright &copy; 2022 <strong>ROBOTECH</strong>. Powered by UIT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Our Privacy</a>
-            </div>
-
-
+        </div>
+        <div class="copyright">
+            Copyright &copy; 2022 <strong>ROBOTECH</strong>. Powered by UIT - <a asp-area="" asp-controller="Home" asp-action="Privacy" style="text-decoration:none">Our Privacy</a>
         </div>
     </footer>
 
