--- a/RoboTech/Views/Checkout/Index.cshtml
+++ b/RoboTech/Views/Checkout/Index.cshtml
@@ -113,13 +113,14 @@
                     </div>
                 </article>
             </div>
-            <div class="col-40" style="position: sticky; top: 0; align-self: flex-start">
+            <div class="col-40" style="position: sticky; top: 0; align-self: flex-start; ">
                 <article class="card" style="padding: 10px;">
                     <div class="container p-3">
                         <div class="col-lg-12">
                             <h6 class="mb-4 mt-3">
-                                <a href="/home/ProductList" class="text-body">
-                                    <i class="fas fa-long-arrow-alt-left me-4"></i>Continue shopping
+                                <a href="/Product" class="text-body">
+                                    <i class="fas fa-long-arrow-alt-left me-4"></i>
+                                    Continue shopping
                                 </a>
                             </h6>
                             <hr>
@@ -129,8 +130,8 @@
                                     <p class="mb-1 fs-3 mb-4">Shopping cart</p>
                                     <p class="d-inline ps-2">
                                         <strong>
-                                            Product<p class="float-end"
-                                                      style="padding-right: 70px;">Price</p>
+                                            Product<span class="float-end"
+                                                      style="padding-right: 70px;">Price</span>
                                         </strong>
                                     </p>
 
@@ -147,7 +148,7 @@
                                                      style="width: 65px; height:65px;">
                                             </div>
                                             <div class="ms-3">
-                                                <h6 ><strong>Iphone 11 pro</strong></h6>
+                                                <h6><strong>Iphone 11 pro</strong></h6>
                                                 <p class="small mb-0">256GB, Navy Blue</p>
                                             </div>
                                         </div>
@@ -191,13 +192,13 @@
                                 </div>
                             </div>
 
-                            
+
                             <div class="mt-4">
                                 <p class="d-inline ps-3">
                                     <strong>
-                                        TOTAL<p class="float-end" style="padding-right: 10px;">
+                                        TOTAL<span class="float-end" style="padding-right: 10px;">
                                             4.798.000 VND
-                                        </p>
+                                        </span>
                                     </strong>
                                 </p>
                             </div>
@@ -217,7 +218,7 @@
                             <h1>Payment Success !</h1>
                             <p>
                                 Hang on now, your order has been sent to us. We will reach out to you as soon
-                                   as possible.
+                                as possible.
                             </p>
                             <a href="/Home">Go to Home</a>
                         </div>
