Re-scaffold database

--- a/RoboTech/Views/Checkout/Index.cshtml
+++ b/RoboTech/Views/Checkout/Index.cshtml
@@ -217,7 +217,7 @@
                         <div class="content p-2">
                             <h1>Payment Success !</h1>
                             <p>
-                                Hang on now, your order has been sent to us. We will reach out to you as soon
+                                Hang on now, your order has been sent to us. We'll reach out to you as soon
                                 as possible.
                             </p>
                             <a href="/Home">Go to Home</a>
