--- a/RoboTech/Areas/Admin/Views/AdminAccounts/Details.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminAccounts/Details.cshtml
@@ -42,10 +42,10 @@
             @Html.DisplayFor(model => model.LastLogin)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreateDate)
+            @Html.DisplayNameFor(model => model.CreatedDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreateDate)
+            @Html.DisplayFor(model => model.CreatedDate)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Active)
