--- a/RoboTech/Areas/Admin/Views/AdminAccounts/Edit.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminAccounts/Edit.cshtml
@@ -45,9 +45,9 @@
                 <span asp-validation-for="LastLogin" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CreateDate" class="control-label"></label>
-                <input asp-for="CreateDate" class="form-control" />
-                <span asp-validation-for="CreateDate" class="text-danger"></span>
+                <label asp-for="CreatedDate" class="control-label"></label>
+                <input asp-for="CreatedDate" class="form-control" />
+                <span asp-validation-for="CreatedDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Active" class="control-label"></label>
