--- a/RoboTech/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RoboTech/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -180,7 +180,7 @@
                 <!-- Footer START -->
                 <footer class="footer">
                     <div class="footer-content">
-                        <p class="m-b-0">Copyright © 2022 <strong>ROBOTECH</strong>. All rights reserved.</p>
+                        <p style="text-align: center;line-height: 100px;">Copyright © 2022 <strong>ROBOTECH</strong>. All rights reserved.</p>
                     </div>
                 </footer>
                 <!-- Footer END -->
