--- a/RoboTech/Areas/Admin/Views/Shared/_SideNavPartialView.cshtml
+++ b/RoboTech/Areas/Admin/Views/Shared/_SideNavPartialView.cshtml
@@ -6,7 +6,7 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-dashboard"></i>
                     </span>
-                    <span class="title">Dashboard</span>
+                    <span class="title">DASHBOARD</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
@@ -18,7 +18,7 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
                     </span>
-                    <span class="title">Quản lý đơn hàng</span>
+                    <span class="title">QUẢN LÝ ĐƠN HÀNG</span>
                 </a>
             </li>
             <li class="nav-item dropdown">
@@ -26,14 +26,14 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
                     </span>
-                    <span class="title">Quản lý sản phẩm</span>
+                    <span class="title">QUẢN LÝ SẢN PHẨM</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a asp-area="Admin" asp-controller="AdminProducts" asp-action="Index">Danh sách sản phẩm</a>
+                        <a asp-area="Admin" asp-controller="AdminProducts" asp-action="Index">DANH SÁCH SẢN PHẨM</a>
                     </li>
                     <li>
                         <a href="form-layouts.html">Form Layouts</a>
@@ -49,7 +49,7 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
                     </span>
-                    <span class="title">Quản lý khách hàng</span>
+                    <span class="title">QUẢN LÝ KHÁCH HÀNG</span>
                 </a>
             </li>
 
@@ -59,7 +59,7 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-form"></i>
                     </span>
-                    <span class="title">Doanh số</span>
+                    <span class="title">DOANH SỐ</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
@@ -81,20 +81,20 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-table"></i>
                     </span>
-                    <span class="title">Quản lý hệ thống</span>
+                    <span class="title">QUẢN LÝ HỆ THỐNG</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a asp-area="Admin" asp-controller="AdminAccounts" asp-action="Index">Quản lý tài khoản</a>
+                        <a asp-area="Admin" asp-controller="AdminAccounts" asp-action="Index">QUẢN LÝ TÀI KHOẢN</a>
                     </li>
                     <li>
-                        <a asp-area="Admin" asp-controller="AdminCategories" asp-action="Index">Quản lý danh mục</a>
+                        <a asp-area="Admin" asp-controller="AdminCategories" asp-action="Index">QUẢN LÝ DANH MỤC</a>
                     </li>
                     <li>
-                        <a asp-action="Index" asp-controller="AdminRoles" asp-area="Admin">Quản lý quyền truy cập</a>
+                        <a asp-action="Index" asp-controller="AdminRoles" asp-area="Admin">QUẢN LÝ TRUY CẬP</a>
                     </li>
                     <li>
                         <a href="data-table.html">Quản lý Tỉnh/Thành</a>
@@ -103,19 +103,11 @@
                 </ul>
             </li>
             <li class="nav-item">
-                <a class="dropdown-toggle" asp-action="Index" asp-controller="AdminTinDangs" asp-area="Admin">
-                    <span class="icon-holder">
-                        <i class="anticon anticon-file"></i>
-                    </span>
-                    <span class="title">Quản lý tin Blog</span>
-                </a>
-            </li>
-            <li class="nav-item">
                 <a class="dropdown-toggle" asp-action="Index" asp-controller="AdminPages" asp-area="Admin">
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
                     </span>
-                    <span class="title">Quản lý Pages</span>
+                    <span class="title">QUẢN LÝ PAGES</span>
                 </a>
             </li>
             <li class="nav-item dropdown">
@@ -123,7 +115,7 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-lock"></i>
                     </span>
-                    <span class="title">Quản lý Shipper</span>
+                    <span class="title">QUẢN LÝ SHIPPER</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
