--- a/RoboTech/Views/Accounts/DangkyTaiKhoan.cshtml
+++ b/RoboTech/Views/Accounts/DangkyTaiKhoan.cshtml
@@ -15,15 +15,15 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="field input-field">
                 <input type="text" asp-for="FullName" placeholder="Name" class="input">
-                <span asp-validation-for="FullName" class="text-danger"></span>
+                @*<span asp-validation-for="FullName" class="text-danger"></span>*@
             </div>
             <div class="field input-field">
                 <input type="email" asp-for="Email" placeholder="Email" class="input">
-                <span asp-validation-for="Email" class="text-danger"></span>
+                @*<span asp-validation-for="Email" class="text-danger"></span>*@
             </div>
             <div class="field input-field">
                 <input type="tel" asp-for="Phone" placeholder="Phone Number" class="input">
-                <span asp-validation-for="Phone" class="text-danger"></span>
+                @*<span asp-validation-for="Phone" class="text-danger"></span>*@
             </div>
 
 
