--- a/RoboTech/Views/Product/Details.cshtml
+++ b/RoboTech/Views/Product/Details.cshtml
@@ -50,7 +50,7 @@
                 </div>
                 @* card-right*@
                 <div class="product-content">
-                    <h2 class="product-title"> name pc</h2>
+                    <h2 class="product-title">@Model.Name</h2>
                     <div class="product-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
