--- a/RoboTech/wwwroot/css/style_login.css
+++ b/RoboTech/wwwroot/css/style_login.css
@@ -247,3 +247,8 @@ body {
     text-align: center;
     font-size: 22px;
 }
+.text-danger {
+    color: red;
+    font-style: Roboto;
+    font-weight: bold;
+}
