--- a/RoboTech/Views/Accounts/Dashboard.cshtml
+++ b/RoboTech/Views/Accounts/Dashboard.cshtml
@@ -3,129 +3,113 @@
 @{
     ViewData["Title"] = "Dashboard";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    RoboTech.ModelViews.ChangePasswordViewModel changePassword = new RoboTech.ModelViews.ChangePasswordViewModel();
 }
-
-<h1>Dashboard</h1>
-
-<main class="main-content">
-    <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/1-1-1920x373.jpg">
-        <div class="container h-100">
-            <div class="row h-100">
-                <div class="col-lg-12">
-                    <div class="breadcrumb-item">
-                        <h2 class="breadcrumb-heading">Product Related</h2>
-                        <ul>
-                            <li>
-                                <a href="/">Trang chủ <i class="pe-7s-angle-right"></i></a>
-                            </li>
-                            <li>Tài khoản của tôi</li>
-                        </ul>
-                    </div>
-                </div>
+<div class="container"> 
+    <main>
+        <div class="account-page account-page-area section-space-y-axis-100">
+            <div class="profile">
+                <ul class="nav myaccount-tab-trigger" id="account-page-tab" role="tablist">
+                    <li class="nav-item"><a href="#account-dashboard" class="nav-link active" id="account-dashboard-tab" data-bs-toggle="tab" aria-controls="account-dashboard">Account <span>></span></a></li>
+                    <li class="nav-item"><a href="#account-details" class="nav-link" id="account-details-tab" data-bs-toggle="tab" aria-controls="account-orders" aria-selected="false">Billing Detail <span>></span></a></li>
+                    <li class="nav-item"><a href="#account-orders" class="nav-link" id="account-orders-tab" data-bs-toggle="tab" aria-controls="account-details" aria-selected="false">My Orders <span>></span></a></li>
+                    <li class="nav-item"><a href="" class="nav-link" data-bs-toggle="tab">Update Account <span>></span></a></li>
+                    <li class="nav-item"><a href="change-password.html" class="nav-link" data-bs-toggle="tab">Change Password <span>></span></a></li>
+                    <li class="nav-item"><a href="" class="nav-link" id="account-logout-tab" role="tab" aria-selected="false">Logout <span>></span></a></li>
+                </ul>
             </div>
-        </div>
-    </div>
-    <div class="account-page-area section-space-y-axis-100">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <ul class="nav myaccount-tab-trigger" id="account-page-tab" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" id="account-dashboard-tab" data-bs-toggle="tab" href="#account-dashboard" role="tab" aria-controls="account-dashboard" aria-selected="true">Thông tin tài khoản</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="account-orders-tab" data-bs-toggle="tab" href="#account-orders" role="tab" aria-controls="account-orders" aria-selected="false">Danh sách đơn hàng</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="account-details-tab" data-bs-toggle="tab" href="#account-details" role="tab" aria-controls="account-details" aria-selected="false">Thay đổi mật khẩu</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="account-logout-tab" href="dang-xuat.html" role="tab" aria-selected="false">Đăng xuất</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-9">
-                    <div class="tab-content myaccount-tab-content" id="account-page-tab-content">
-                        <div class="tab-pane fade show active" id="account-dashboard" role="tabpanel" aria-labelledby="account-dashboard-tab">
-                            <div class="myaccount-dashboard">
-                                <p>
-                                    Xin chào, <b>@Model.FullName</b>
-                                </p>
-                                <p>Email: @Model.Email</p>
-                                <p>Số điện thoại: @Model.Phone</p>
-                                <p>Địa chỉ: @Model.Address</p>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="account-orders" role="tabpanel" aria-labelledby="account-orders-tab">
-                            <div class="myaccount-orders">
-                                <h4 class="small-title">DANH SÁCH ĐƠN HÀNG</h4>
-                                @*@if (DanhSachDonHang != null && DanhSachDonHang.Count() > 0)
+            <div class="account-detail">
+                <div class="tab-content myaccount-tab-content" id="account-page-tab-content">
+                    <div class="tab-pane fade show active" id="account-dashboard" role="tabpanel" aria-labelledby="account-dashboard-tab">
+                        <div class="myaccount-dashboard">
+                            <p>
+                                Welcome back, <b>@Model.FullName !</b>
+                            </p>
+                            <p>Email: <b>@Model.Email</b></p>
+                            <p>Phone Number: <b>@Model.Phone</b> </p>
+                            <p>Address: 
+                                @if (@Model.Address != null)
                                 {
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered table-hover">
-                                            <tbody>
-                                                <tr>
-                                                    <th>ID</th>
-                                                    <th>Ngày mua hàng</th>
-                                                    <th>Ngày ship hàng</th>
-                                                    <th>Trạng thái</th>
-                                                </tr>
-                                                @foreach (var item in DanhSachDonHang)
-                                                {
-                                                    <tr>
-                                                        <td><a class="account-order-id" href="javascript:void(0)">#@item.OrderId</a></td>
-                                                        <td>@item.OrderDate</td>
-                                                        <td>@item.ShipDate</td>
-                                                        <td>@item.TransactStatus.Status</td>
-                                                        <td>
-                                                            <a href="javascript:void(0)" class="xemdonhang" data-madonhang="@item.OrderId">Xem đơn hàng</a>
-                                                        </td>
-                                                    </tr>
-                                                }
-
-
-                                            </tbody>
-                                        </table>
-                                        <br />
-                                        <br />
-                                        <br />
-                                        <br />
-                                        <hr />
-                                        <div id="records_table">
-                                        </div>
-                                    </div>
+                                    <b>@Model.Address</b>
                                 }
-                                else
-                                {
-                                    <p>Chưa có đơn hàng!</p>
-                                }*@
-                            </div>
+                                else {
+                                <b>You not yet update address for your orders! </b>
+                                }
+                            </p>
                         </div>
-                        <div class="tab-pane fade" id="account-address" role="tabpanel" aria-labelledby="account-address-tab">
-                            <div class="myaccount-address">
-                                <p>The following addresses will be used on the checkout page by default.</p>
-                                <div class="row">
-                                    <div class="col">
-                                        <h4 class="small-title">BILLING ADDRESS</h4>
-                                        <address>
-                                            @Model.Address
-                                        </address>
+                    </div>
+                    <div class="tab-pane fade" id="account-orders" role="tabpanel" aria-labelledby="account-orders-tab">
+                        <div class="myaccount-orders">
+                            <h4 class="small-title">LIST OF YOUR ORDERS</h4>
+                            @*@if (DanhSachDonHang != null && DanhSachDonHang.Count() > 0)
+                            {
+                                <div class="table-responsive">
+                                    <table class="table table-bordered table-hover">
+                                        <tbody>
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>Ngày mua hàng</th>
+                                                <th>Ngày ship hàng</th>
+                                                <th>Trạng thái</th>
+                                            </tr>
+                                            @foreach (var item in DanhSachDonHang)
+                                            {
+                                                <tr>
+                                                    <td><a class="account-order-id" href="javascript:void(0)">#@item.OrderId</a></td>
+                                                    <td>@item.OrderDate</td>
+                                                    <td>@item.ShipDate</td>
+                                                    <td>@item.TransactStatus.Status</td>
+                                                    <td>
+                                                        <a href="javascript:void(0)" class="xemdonhang" data-madonhang="@item.OrderId">Xem đơn hàng</a>
+                                                    </td>
+                                                </tr>
+                                            }
+
+
+                                        </tbody>
+                                    </table>
+                                    <br />
+                                    <br />
+                                    <br />
+                                    <br />
+                                    <hr />
+                                    <div id="records_table">
                                     </div>
-                                    <div class="col">
-                                        <h4 class="small-title">SHIPPING ADDRESS</h4>
-                                        <address>
-                                            @Model.Address
-                                        </address>
-                                    </div>
+                                </div>
+                            }
+                            else
+                            {
+                                <p>Chưa có đơn hàng!</p>
+                            }*@
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="account-address" role="tabpanel" aria-labelledby="account-address-tab">
+                        <div class="myaccount-address">
+                            <p>The following addresses will be used on the checkout page by default.</p>
+                            <div class="row">
+                                <div class="col">
+                                    <h4 class="small-title">BILLING ADDRESS</h4>
+                                    <address>
+                                        @Model.Address
+                                    </address>
+                                </div>
+                                <div class="col">
+                                    <h4 class="small-title">SHIPPING ADDRESS</h4>
+                                    <address>
+                                        @Model.Address
+                                    </address>
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="account-details" role="tabpanel" aria-labelledby="account-details-tab">
-                            @*@await Html.PartialAsync("_ChangePasswordPartialView", changePassword)*@
-                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="account-details" role="tabpanel" aria-labelledby="account-details-tab">
+                        @*@await Html.PartialAsync("_ChangePasswordPartialView", changePassword)*@
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
+        @*Information display detail*@
+        
+        
+    </main> <!-- Main Area -->
+</div>
