--- a/RoboTech/wwwroot/css/site.css
+++ b/RoboTech/wwwroot/css/site.css
@@ -1427,3 +1427,79 @@ a.active_pagin {
     background: #175B6a;
     color: white;
 }
+/* Account Page ----- Profile Styling */
+:root {
+    --khaki: #f2d985;
+    --darkkhaki: #f2d985;
+    --darkStaleGray: #313131;
+}
+main .account-page {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+    main .account-page .profile {
+        width: 30%;
+    }
+
+    main .account-page .account-detail {
+        width: 60%;
+    }
+
+    main .account-page .profile .profile-detail {
+        width: 140px;
+        height: 160px;
+        margin: 0 auto;
+        margin-bottom: 60px;
+        text-align: center;
+        overflow: none;
+    }
+
+        main .account-page .profile .profile-detail img {
+            width: 100%;
+            height: 140px;
+            border: 1px solid #eee;
+            border-radius: 50%;
+            box-shadow: 0px 0px 8px #888888;
+            object-fit: cover;
+        }
+        main .account-page .profile .profile-detail h2 {
+            color: var(--darkStaleGray);
+            margin-top: 10px;
+            margin-bottom: 5px;
+        }
+
+    main .account-page .profile ul {
+        List-style: none;
+        padding: 10px;
+    }
+
+        main .account-page .profile ul li {
+            margin-bottom: 5px;
+        }
+.nav-item a {
+    text-transform: uppercase;
+}
+            main .account-page .profile ul li a {
+                color: var(--darkStaleGray);
+                text-decoration: none;
+                text-transform: uppercase;
+                font-weight: bold;
+                border: 1px solid rgba(236, 240, 241,0.3);
+                text-align: left;
+                padding: 5px 8px;
+                display: block;
+            }
+                main .account-page .profile ul li a span {
+                    float: right;
+                }
+
+                .profile .active,
+                main .account-page .profile ul li a:hover {
+                    color: var(--khaki) !important;
+                    background-color: var(--darkStaleGray);
+                }
+.myaccount-dashboard p {
+    font-size: 20px;
+    font-style: acumin;
+}
