Try to Export img from db, edit some transition and background color, add connection string and rescaffold database

--- a/RoboTech/Views/Checkout/Index.cshtml
+++ b/RoboTech/Views/Checkout/Index.cshtml
@@ -17,7 +17,7 @@
                             <div class="payment-type">
                                 <h4>Choose payment method below</h4>
                                 <div class="types flex justify-space-between">
-                                    <div class="type">
+                                    <div class="type" style="height: 156px">
                                         <div class="logo">
                                             <i class="far fa-credit-card"></i>
                                         </div>
